require plugin for turn

--- a/node/.tern-config
+++ b/node/.tern-config
@@ -6,7 +6,10 @@
     "underscore"
   ],
   "plugins": {
-    "node": {}
+    "node": {},
+    "requirejs": {
+      "baseURL": "./libs",
+      "paths": {}
+    }
   }
 }
-
