complete strings for tern config

--- a/node/.tern-config
+++ b/node/.tern-config
@@ -8,6 +8,7 @@
   ],
   "plugins": {
     "node": {},
+    "complete_strings": {},
     "requirejs": {
       "baseURL": "./libs",
       "paths": {}
