remove all predefined configuration, add shell theme, update config.json

--- a/powerline/config.json
+++ b/powerline/config.json
@@ -17,8 +17,8 @@
 			"theme": "default"
 		},
 		"shell": {
-			"colorscheme": "default",
-			"theme": "default",
+			"colorscheme": "solarized",
+			"theme": "breath",
 			"local_themes": {
 				"continuation": "continuation",
 				"select": "select"
