--- a/init/com.googlecode.iterm2.plist
+++ b/init/com.googlecode.iterm2.plist
@@ -578,7 +578,7 @@
 	<key>NSFontPanelAttributes</key>
 	<string>1, 4</string>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Documents</string>
+	<string>~/init</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{712, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -590,7 +590,7 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>660 335 661 327 0 0 1680 1027 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>611 359 924 485 0 0 1920 1057 </string>
+	<string>464 370 924 485 0 0 1920 1057 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>768 714 384 129 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
@@ -2084,7 +2084,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/breath/Documents</string>
+	<string>~/init</string>
 	<key>PromptOnQuit</key>
 	<false/>
 	<key>QuitWhenAllWindowsClosed</key>
@@ -2100,7 +2100,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-05-08T15:26:41Z</date>
+	<date>2015-05-09T17:30:02Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
