full docs for tern

--- a/node/.tern-config
+++ b/node/.tern-config
@@ -8,6 +8,9 @@
   ],
   "plugins": {
     "node": {},
+    "doc_comment": {
+      "fullDocs": true
+    },
     "complete_strings": {},
     "requirejs": {
       "baseURL": "./libs",
