add some more git aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,4 +1,12 @@
 [alias]
+    cp = cherry-pick
+    cl = clone
+    ci = commit
+    co = checkout
+    br = branch
+    diff = diff --word-diff
+    dc = diff --cached
+
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
@@ -71,6 +79,20 @@
 			git commit --amend -m \"$(git log -1 --pretty=%B)\n\nCloses #$1.\"; \
 		fi \
 	}; f"
+
+    r = reset
+    r1 = reset HEAD^
+    r2 = reset HEAD^^
+    rh = reset --hard
+    rh1 = reset HEAD^ --hard
+    rh2 = reset HEAD^^ --hard
+
+    sl = stash list
+	sa = stash apply
+	ss = stash save
+
+    # List contributors with number of commits excluding merges
+    ccontrib=sshortlog -n -s --no-merges
 
 [apply]
 
